修改jvm文档